--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,14 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v1
 
+      - run: sudo apt-get update
+      - run: sudo apt-get install yq
+
+      - name: Build
+        run: ./compile.sh
+
       - name: Archive
-        run: tar -czvf upload.tar.gz -C . *
+        run: tar -czvf upload.tar.gz -C ./build .
 
       - name: Release
         run: 'curl -X POST -H "Authorization: Bearer ${{ secrets.DEPLOY }}" -F "upload=@upload.tar.gz" "https://sites.1f349.net/u?site=1f349.net&branch=${{ github.ref_name }}"'
